--- a/学习资源/20160818-微信隐藏功能接口.md
+++ b/学习资源/20160818-微信隐藏功能接口.md
@@ -2,7 +2,7 @@
 
 > [时间：2016.08.18] [作者：赵卓] [关键字：协议,接口,功能]
 
-可以在微信内打开，或在安装了微信的外部浏览器中打开下方链接：
+可以在安装了微信的外部浏览器中打开下方链接：
 
 | 链接                 | 用途                 |
 |----------------------|---------------------|
